--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ECharts</title>
+    <title>我的图标</title>  
     <!-- 引入 echarts.js -->
     <script src="echarts.min.js"></script>
 </head>
